// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentHeader should render loggedIn user header 1`] = `
<div
  class="header"
>
  <div
    class="jsx-1101895493 HeaderFAQ"
  >
    <div
      class="jsx-1199691705 close-icon"
      role="button"
      tabindex="-1"
    >
      <svg
        fill="currentColor"
        height="24px"
        preserveAspectRatio="xMidYMid meet"
        style="vertical-align:middle;color:#46515e"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </div>
    <div
      class="jsx-1128370742 jsx-3187916200 loggedIn"
    >
      <div
        class="jsx-1128370742 jsx-3187916200 mobileOnly"
      >
        <div
          class="jsx-945483044 back"
          data-cy="back-button"
          role="button"
          tabindex="-1"
        >
          <div
            class="jsx-945483044 chevron"
          >
            <svg
              fill="currentColor"
              height="16px"
              preserveAspectRatio="xMidYMid meet"
              style="vertical-align:middle;color:#8291a6"
              viewBox="0 0 24 24"
              width="16px"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </div>
          <span
            class="jsx-141524338"
          >
            Back
          </span>
        </div>
      </div>
      <div
        class="jsx-1128370742 jsx-3187916200 helpHeader"
      >
        Help
      </div>
      <div
        class="jsx-1128370742 jsx-3187916200 links"
      >
        <div
          class="jsx-1128370742 jsx-3187916200 faqLink desktopOnly"
        >
          <div
            class="jsx-3768482590"
          >
            <span
              class="jsx-1328033587"
            >
              <a
                class="jsx-3768482590 primary"
                href="https://www.kiwi.com/helpcenter/"
                rel="noopener noreferrer"
                target="_blank"
              >
                Full FAQ site
                <span
                  class="jsx-3768482590 inline-icon"
                >
                  <div
                    class="jsx-3768482590 open-icon"
                  >
                    <svg
                      fill="currentColor"
                      height="16px"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align:middle;color:#00a991"
                      viewBox="0 0 24 24"
                      width="16px"
                    >
                      <path
                        d="M19 19H5V5h7V3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                      />
                    </svg>
                  </div>
                </span>
              </a>
            </span>
          </div>
        </div>
        <div
          class="jsx-1128370742 jsx-3187916200 desktopOnly"
        >
          <div
            class="jsx-1683419278 signOut"
            role="button"
            tabindex="0"
          >
            <span
              class="jsx-410270121"
            >
              Sign out
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentHeader should render loggedOut user header 1`] = `
<div
  class="header"
>
  <div
    class="jsx-1101895493 HeaderFAQ"
  >
    <div
      class="jsx-1199691705 close-icon"
      role="button"
      tabindex="-1"
    >
      <svg
        fill="currentColor"
        height="24px"
        preserveAspectRatio="xMidYMid meet"
        style="vertical-align:middle;color:#46515e"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </div>
    <div
      class="jsx-3187916200 jsx-2971753977 loggedOut"
    >
      <div
        class="jsx-3187916200 jsx-2971753977 signInOrBack"
      >
        <div
          class="jsx-3187916200 jsx-2971753977 backButton"
        >
          <div
            class="jsx-945483044 back"
            data-cy="back-button"
            role="button"
            tabindex="-1"
          >
            <div
              class="jsx-945483044 chevron"
            >
              <svg
                fill="currentColor"
                height="16px"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align:middle;color:#8291a6"
                viewBox="0 0 24 24"
                width="16px"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
            </div>
            <span
              class="jsx-141524338"
            >
              Back
            </span>
          </div>
        </div>
      </div>
      <div
        class="jsx-3187916200 jsx-2971753977 helpHeader"
      >
        Help
      </div>
    </div>
  </div>
</div>
`;
